Added new flowbinders resolved endpoint. (#252)